Reformat documentation to create a single searchable html file. Remove unused documentation files. Restyle documentation to improve readability. Remove glossary and FAQ from website. Update links to unsupported page. Refs #2923.

--- a/public/web/catalog.html.erb
+++ b/public/web/catalog.html.erb
@@ -89,12 +89,10 @@
 				<nav>
 					<ul class="nav pull-right">
 					  <li><a href="about.html">About</a></li>
-					  <li><a href="catalog.html">Demos</a></li>
-					  <li><a href="docs/reqs.html">Documentation</a></li>
-					  <li><a href="downloads.html">Downloads</a></li>
-					  <li><a href="glossary.html">Glossary</a></li>
-					  <li><a href="faq.html">FAQ</a></li>
-					  <li><a href="forum.html">Forum</a></li>
+            <li><a href="catalog.html">Demos</a></li>
+            <li><a href="documentation.html">Documentation</a></li>
+            <li><a href="downloads.html">Downloads</a></li>
+            <li><a href="forum.html">Forum</a></li>
 					</ul>
 			  </nav>
 			</div>
