Add gallery page to show "Who's Using VWF". Refs #2910.

--- a/public/web/catalog.html.erb
+++ b/public/web/catalog.html.erb
@@ -90,6 +90,7 @@
 					<ul class="nav pull-right">
 					  <li><a href="about.html">About</a></li>
             <li><a href="catalog.html">Demos</a></li>
+            <li><a href="gallery.html">Who's Using VWF</a></li>
             <li><a href="documentation.html">Documentation</a></li>
             <li><a href="downloads.html">Downloads</a></li>
             <li><a href="forum.html">Forum</a></li>
@@ -102,54 +103,6 @@
 <div class="container" style="margin-top:50px;">
 	<h1>VWF Demos</h1>
 	<hr style="margin:18px 0 18px 0;border-bottom:1px solid #1C1E22;"/>
-
-	<!--  Direct link to ADL Sandbox -->
-	<div class="span12">
-		<div style="padding-top: 15px;" class="adl/sandboxhover">
-			<table class="table table-striped">
-				<tr>
-					<td style="width:25%">
-						<a href="http://vwf.adlnet.gov/adl/sandbox/" target="_blank">
-							<img src="../adl/sandbox/index.vwf.catalog.png" alt="adl/sandbox" / style="vertical-align:middle;">            
-						</a>
-					</td>
-					<td style="width:75%">
-						<h3 style="float:left;vertical-align:middle;">adl/sandbox</h3> 
-						<a style="float:right;vertical-align:middle;" class="btn btn-info btn-small" target="_blank" href="http://vwf.adlnet.gov/adl/sandbox/">Launch New Session</a>
-						<br/>
-						<hr>
-						<p style="font-size:13px;">ADL's sandbox application allows the user to create and edit their own environment. Be sure to check out some of the demo environments - you can reach them from the "Visit an Existing World" button. </p>
-						<br/>
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
-	<!-- End ADL Sandbox -->
-	
-	<!--  Direct link to KimRay Valve -->
-	<div class="span12">
-		<div style="padding-top: 15px;" class="adl/sandboxhover">
-			<table class="table table-striped">
-				<tr>
-					<td style="width:25%">
-						<a href="https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray" target="_blank">
-							<img src="http://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/index.vwf.catalog.png" alt="kimray" / style="vertical-align:middle;">            
-						</a>
-					</td>
-					<td style="width:75%">
-						<h3 style="float:left;vertical-align:middle;">Kimray Valve</h3> 
-						<a style="float:right;vertical-align:middle;" class="btn btn-info btn-small" target="_blank" href="https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray">Launch New Session</a>
-						<br/>
-						<hr>
-						<p style="font-size:13px;">KimRay Valve is a live 3-D Immersive Maintenance Demonstration built on top of Virtual World Framework to demonstrate the capabilities of Remote Subject Matter Experts interacting with a student using a shared real time lesson workspace utilizing webRTC to deliver real time video and voice over IP without any browser plugins. This demo requires the latest Firefox or Chrome browsers.</p>
-						<br/>
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
-	<!-- End Kimray Valve -->
 
 <% while applications.any? do %>
       <div class="span12">
