--- a/support/client/lib/index.css
+++ b/support/client/lib/index.css
@@ -339,3 +339,14 @@ text-shadow: 0px 0px 0 rgba(0, 0, 0, 0.3);
   0% { transform: rotate(0deg); }
   100% { transform: rotate(359deg); }
 }
+
+#incompatibleBrowser {
+    visibility: hidden;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width:100%;
+    height:100%;
+    text-align:center;
+    z-index: 1000;
+ }
