--- a/support/client/build.js.erb
+++ b/support/client/build.js.erb
@@ -26,8 +26,7 @@
     paths: {
         jquery: "jquery-1.10.2.min",
         "jquery-ui": "jquery-ui-1.10.3.custom.min",
-        hammer: "jquery.hammer",
-        bootstrap: "bootstrap.min"
+        hammer: "jquery.hammer"
     }
 
 } )
