Fix dialog z-index
Refs #3108

--- a/public/bzflag/css/smoothness/jquery-ui-1.8.21.custom.css
+++ b/public/bzflag/css/smoothness/jquery-ui-1.8.21.custom.css
@@ -54,6 +54,7 @@
 /* Component containers
 ----------------------------------*/
 /*.ui-widget { font-family: Verdana,Arial,sans-serif; font-size: 1.1em; }*/
+.ui-widget { z-index: 1000; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
 .style1 .ui-widget-content {  color: #ffffff; border: 1px solid #4a7347; background: transparent;}
