--- a/support/client/build.js.erb
+++ b/support/client/build.js.erb
@@ -26,7 +26,16 @@
     paths: {
         jquery: "jquery-1.10.2.min",
         "jquery-ui": "jquery-ui-1.10.3.custom.min",
-        hammer: "jquery.hammer"
+        hammer: "jquery.hammer",
+    },
+
+    shim: {
+        "jquery-ui": {
+            deps: ["jquery"],
+            exports: "$"
+        },
+        "jquery-encoder-0.1.0": ["jquery"],
+        "require-hammer": ["hammer", "jquery"],
     }
 
 } )
