Fix hammer dependency for touch applications

--- a/support/client/build.js.erb
+++ b/support/client/build.js.erb
@@ -28,7 +28,10 @@
             exports: "$"
         },
         "jquery-encoder-0.1.0": ["jquery"],
-        "require-hammer": ["hammer", "jquery"],
+        "hammer": {
+            deps: ["jquery"],
+            exports: "Hammer"
+        }
     }
 
 } )
