--- a/support/client/lib/index.css
+++ b/support/client/lib/index.css
@@ -5,6 +5,7 @@ body {
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
+  margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -165,8 +166,6 @@ input {
 
 #vwf-root {
   position:absolute;
-  top: 0px;
-  left: 0px;
   z-index:-1;
 }
 
