Replication working; phased getState, client reload on socket disconnect.

--- a/lib/vwf/views/instance.slim
+++ b/lib/vwf/views/instance.slim
@@ -6,3 +6,13 @@ h2 Revisions
 
 - @instance.revisions.each do |id, revision|
     p: a href=( to revision_url @instance.id, revision.id, "html" ) = revision.id
+
+h2 States
+
+- @instance.states.each do |id, state|
+    p: a href=( to revision_url @instance.id, state.id, "html" ) = state.id
+
+h2 Actions
+
+- @instance.actions.each do |id, action|
+    p: a href=( to revision_url @instance.id, action.id, "html" ) = action.id
