--- a/lib/vwf/views/instances.slim
+++ b/lib/vwf/views/instances.slim
@@ -1,4 +1,4 @@
 h1 Instances
 
-- @application.instances.each do |id, instance|
+- @storage.instances.each do |id, instance|
     p: a href=( to instance_url instance.id, "html" ) = instance.id
