--- a/lib/vwf/views/revisions.slim
+++ b/lib/vwf/views/revisions.slim
@@ -1,4 +1,4 @@
 h1 Revisions
 
-- @instance.revisions.each do |id, revision|
-    p: a href=( to revision_url @instance.id, revision.id, "html" ) = revision.id
+- @storage.revisions.each do |id, revision|
+    p: a href=( to revision_url revision.id, "html" ) = revision.id
