--- a/lib/vwf/views/layout.slim
+++ b/lib/vwf/views/layout.slim
@@ -2,7 +2,7 @@ doctype html
 
 html
   head
-    title Instances
+    title Virtual World Framework
     css:
       body { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace }
   body
