--- a/lib/vwf/views/application.slim
+++ b/lib/vwf/views/application.slim
@@ -1,12 +1,12 @@
 h1 Application #{ @storage.id }
 
-p: a href=( to "../#{@storage.id}" ) Launch
+p: a href=( to "../#{ ( @storage.tags[@tag] || @storage ).id }" ) Launch
 
 h2: a href=( to tags_url "html" ) Tags
 
 p
   - @storage.tags.each do |id, tag|
-    a< href=( to tag_url tag.id, "html" ) = tag.id
+    a< href=( to @tag ? "../#{tag.id}.html" : "../../#{tag.id}.html" ) = tag.id
 
 h2: a href=( to instances_url "html" ) Instances
 
