--- a/lib/vwf/views/revision.slim
+++ b/lib/vwf/views/revision.slim
@@ -1,12 +1,12 @@
 h1 Revision #{ @storage.id }
 
-p: a href=( to "../#{ ( @storage.tags[ @tag ] || @storage ).id }" ) Launch
+p: a href=( to "../#{ ( @storage.tags[@tag] || @storage ).id }" ) Launch
 
 h2: a href=( to tags_url "html" ) Tags
 
 p
   - @storage.tags.each do |id, tag|
-    a< href=( to tag_url tag.id, "html" ) = tag.id
+    a< href=( to @tag ? "../#{tag.id}.html" : "../../#{tag.id}.html" ) = tag.id
 
 h2 State
 
