--- a/lib/vwf/views/tags.slim
+++ b/lib/vwf/views/tags.slim
@@ -1,4 +1,4 @@
 h1 Tags
 
 - @storage.tags.each do |id, tag|
-  p: a href=( to tag_url tag.id, "html" ) = tag.id
+  p: a href=( to @tag ? "../#{tag.id}.html" : "../../#{tag.id}.html" ) = tag.id
