--- a/support/client/lib/minimal_jplayer_style.css
+++ b/support/client/lib/minimal_jplayer_style.css
@@ -8,6 +8,7 @@
 	margin: auto;
  	position: absolute;
  	top: 0; left: 0; bottom: 0; right: 0;
- 	/*z-index: -1;*/
+ 	/*z-index: 102;*/
+ 	z-index: -2;
 }
 
