--- a/views/login.jade
+++ b/views/login.jade
@@ -4,30 +4,33 @@ block content
   .modal.show
     .modal-dialog
       .modal-content
-        form.form-horizontal(method="post")
+        form(method="post")
           .modal-header
             h3.modal-title TDG
           .modal-body
-            .form-group
-              label.col-sm-2.control-label(for="username")
-                | Username
-              .col-sm-10
-                input.form-control#username(type="text" placeholder="Select a username" name="username")
-            .form-group.collapse#password-group
-              style(scoped).
-                .form-group { transition: height 0.1s }
-              label.col-sm-2.control-label(for="password")
-               | Password
-              .col-sm-10
-                input.form-control#password(type="password" placeholder="Password" name="password")
-            .form-group
-              .col-sm-offset-2.col-sm-10
-                .checkbox
-                  label
-                    input#instructor(type="checkbox" data-toggle="collapse" data-target="#password-group" value="instructor" name="instructor")
-                    | Instructor
-            .form-group.form-group-sm
-              .col-sm-12
+            .row
+              .form-group.col-sm-5
+                label(for="last-name") Last name
+                input.form-control#last-name(type="text" name="last_name")
+              .form-group.col-sm-5
+                label(for="first-name") First name
+                input.form-control#first-name(type="text" name="first_name")
+              .form-group.col-sm-2
+                label(for="middle-initial") M. I.
+                input.form-control#middle-initial(type="text" name="middle_initial")
+            .row
+              .form-group.col-sm-5
+                label &nbsp;
+                .checkbox: label
+                  input#instructor(type="checkbox" data-toggle="collapse" data-target="#password-group" value="instructor" name="instructor")
+                  | Instructor
+              .form-group.fade.col-sm-7#password-group
+                style(scoped).
+                  .form-group { transition: height 0.1s }
+                label(for="password") Password
+                input.form-control#password(type="password" name="password")
+            .row
+              .form-group.form-group-sm.col-sm-12
                 while message = flash.shift()
                   div.alert(class="alert-" + message.type role="alert")= message.message
           .modal-footer
