--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,9 @@ block scenarios
   -
     var application = "/TDG/index.vwf",
       scenarios = manifest[ application ] || [];
-    var scenario_sessions = scenarios.filter( function( scenario ) {
+    var scenario_sessions = _.sortBy( scenarios, function( scenario, name ) {
+      return name;
+    } ).filter( function( scenario ) {
       return scenario.scenario.document;
     } ).reduce( function( scenario_sessions, scenario ) {
       var sessions = ( scenario.sessions || [] ).filter( function( session ) {
@@ -90,7 +92,9 @@ block sessions
   -
     var application = "/TDG/index.vwf",
       scenarios = manifest[ application ] || [];
-    var scenario_sessions = scenarios.reduce( function( scenario_sessions, scenario ) {
+    var scenario_sessions = _.sortBy( scenarios, function( scenario, name ) {
+      return name;
+    } ).reduce( function( scenario_sessions, scenario ) {
       var sessions = ( scenario.sessions || [] ).filter( function( session ) {
         return session.document;
       } );
