Remove redundant session `title` field

--- a/views/index.jade
+++ b/views/index.jade
@@ -119,7 +119,7 @@ block sessions
         var scenario = scenario_session.scenario,
           session = scenario_session.session;
       tr
-        td= session.state.title
+        td= scenario.state.title
         td= session.state.classroom.company
         td= session.state.classroom.platoon
         td= session.state.classroom.unit
